Move to OOP. Add bcrypt, cors, jwt. Add user permission

--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -5,7 +5,7 @@
       <div class="block-heading">
         <h2 class="text-info">Thêm Post</h2>
       </div>
-      <form method="POST" action="/addedPost" style="
+      <form method="POST" action="/posts/add" style="
       margin: auto;
       width: 1000px;max-width: 1000px;">
         <div class="form-group"><label for="name">Tên post</label><input class="form-control item" type="text" id="name"
