--- a/views/addTraining.ejs
+++ b/views/addTraining.ejs
@@ -6,7 +6,7 @@
         <h2 class="text-info">Thêm training</h2>
       </div>
 
-      <form method="POST" action="/addedTraining">
+      <form method="POST" action="/trainings/add">
         <div class="form-group"><label for="name">Training name</label><input class="form-control item" type="text" id="name"
             name="name"></div>
         <div class="form-group"><label for="mentor">Mentor</label><input class="form-control item" type="text" id="mentor"
