--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -5,20 +5,20 @@
       <div class="block-heading">
         <h2 class="text-info">Edit training</h2>
       </div>
-      <% let x = "/post/update/" + val._id %>
+      <% let x = "/posts/update/" + post._id %>
       <form method="POST" action="<%= x %>" style="
       margin: auto;
       width: 1000px;max-width: 1000px;">
         <div class="form-group"><label for="name">Tên post</label><input class="form-control item" type="text" id="name"
-          name="name" value="<%= val.name %>"></div>
+          name="name" value="<%= post.name %>"></div>
         <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
-          name="brief"><%= val.brief %></textarea></div>
+          name="brief"><%= post.brief %></textarea></div>
         <div class="form-group"><label for="post">Post</label><textarea class="form-control item" type="text" id="post"
-          name="post"><%= val.post %></textarea></div>
+          name="post"><%= post.post %></textarea></div>
         <div class="form-group"><label for="html">isHTML</label><input class="form-control item" type="checkbox" id="html"
           name="html"></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
-          name="imgPath" value = "<%= val.imgPath %>""></div>
+          name="imgPath" value = "<%= post.imgPath %>""></div>
         </br>
         <button class="btn btn-primary btn-block" type="submit">Tạo Post</button>
       </form>
