--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/micromodal.css">
     <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
     <script src="assets/js/font-awesome.js" crossorigin="anonymous"></script>
+    <script src="assets/js/jquery-3.5.0.min.js"></script>
 </head>
 
 
@@ -20,27 +21,28 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     var socket = io();
+    socket.emit('login');
   </script>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
         <div class="container"><a class="navbar-brand logo" href="/">JS CLUB</a>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link logo" href="/">trang chủ</a></li>
-                    <% if (login == 1) { %>
+                    <% if (typeof user !== 'undefined' && user !== null) { %>
                       <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
-                          <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/post-list">Tin Tức</a><a class="dropdown-item" role="presentation" href="/confession">Confession</a></div>
+                          <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/posts/list">Tin Tức</a><a class="dropdown-item" role="presentation" href="/confessions/list">Confession</a></div>
                       </li>
                     <% } else { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/post-list">Tin tức</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/posts/list">Tin tức</a></li>
                     <% } %>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/training">Training</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/trainings/list">Training</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
-                    <% if (login != 1) { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/login">đăng nhập</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/registration">ĐĂNG KÝ</a></li>
+                    <% if (typeof user !== 'undefined' && user !== null) { %>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/profile">trang cá nhân</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/logout">đăng xuất</a></li>
                     <% } else { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/profile">trang cá nhân</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/logout">đăng xuất</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/login">đăng nhập</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/register">ĐĂNG KÝ</a></li>
                     <% } %>
                 </ul>
             </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
