--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,12 +5,12 @@
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info">Đăng Nhập</h2><p>Chưa có tài khoản? <a class="text-info" href="registration">Đăng ký</a></p>
-                    <% if (loginFail) {%>
-                      <div class="btn-warning">Sai thông tin đăng nhập</div>
-                    <% } %>
+                    <% try { error %>
+                      <div class="btn-warning"><%= error %></div>
+                    <% } catch (e) {} %>
                 </div>
 
-                <form method="POST" action="/loginProcess">
+                <form method="POST" action="/users/login">
                     <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email" id="email" name="email"></div>
                     <div class="form-group"><label for="password">Mật khẩu</label><input class="form-control" type="password" id="password" name="password"></div>
                     <div class="form-group">
