--- a/views/confession-list.ejs
+++ b/views/confession-list.ejs
@@ -4,7 +4,7 @@
     <script>
       var user = <%- JSON.stringify(user) %>;
     </script>
-    <% for (let j in confessions) { %>
+    <% for (let j = confessions.length - 1; j >= 0; -- j) { %>
     <% let i = confessions[j] %>
     <div class="container mb-5">
       <div class="block-content">
