--- a/views/post-list.ejs
+++ b/views/post-list.ejs
@@ -7,14 +7,14 @@
                     <p>Chỉ có làm chịu khó cần cù thì bù siêng năng. Chỉ có làm thì mới có ăn. Những cái loại không làm mà đòi có ăn thì ...</p>
                 </div>
                 <div class="block-content">
-                  <% for (let j in posts) { %>
+                  <% for (let j = posts.length - 1; j >= 0; -- j) { %>
                     <% let i = posts[j] %>
                     <% let id2 = "bmodal-" + j.toString() %>
                     <div class="modal micromodal-slide" id="<%= id2 %>" aria-hidden="true">
                       <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-                        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+                        <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title<%=i._id%>">
                           <header class="modal__header">
-                            <h1 class="modal__title" id="modal-1-title">
+                            <h1 class="modal__title" id="modal-1-title<%=i._id%>">
                               Do you really want to delete this training? 
                             </h1>
                             <br>
@@ -45,7 +45,7 @@
                                   <form action="/posts/edit/<%= i._id %>" method="GET" style="display: inline;">
                                     <button class="btn btn-warning btn-sm mr-1" type="submit">Edit Post</button>
                                   </form>
-                                  <button class="btn btn-danger btn-sm myButton2">Delete Post</button>
+                                  <button class="btn btn-danger btn-sm myButton2" id="<%= j %>">Delete Post</button>
                                 <% } } catch (e) {} %>
                               </div>
                         </div>
