Add fpt email check. Add otp mail

--- a/views/infoUpdate.ejs
+++ b/views/infoUpdate.ejs
@@ -29,7 +29,7 @@
                                   </div>
                                   <div class="col"><label>Số điện thoại</label><input class="form-control" type="text" name="phone" value="<%= user.phone %>"></div>
                                   <div class="col-sm-12 col-md-6">
-                                      <div class="form-group"><label>Khoá (bằng số) </label><input class="form-control" type="number" autocomplete="off" name="gen" value="<%= user.gen %>"></div>
+                                      <div class="form-group"><label>Niên khoá (bằng số) </label><input class="form-control" type="number" autocomplete="off" name="gen" value="<%= user.gen %>"></div>
                                   </div>
                               </div>
                               <div class="form-row">
