--- a/views/post.ejs
+++ b/views/post.ejs
@@ -7,7 +7,7 @@
         <div class="post-image dmmImg4" style="background-image:url(&quot;<%= post.imgPath %>&quot;);"></div>
         <div class="post-body">
           <h3><%= post.name %></h3>
-          <div class="post-info"><span>By <%= post.createdBy %></span><span><%= post.date %></span></div>
+          <div class="post-info"><span>By <%= post.username %></span><span><%= post.date %></span></div>
           <%- post.post %>
         </div>
       </div>
