--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -1,4 +1,14 @@
 <%- include("header"); -%>
+<script>
+  tinymce.init({
+      selector: '#post',
+      plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+      toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
+      toolbar_mode: 'floating',
+      tinycomments_mode: 'embedded',
+      tinycomments_author: 'Author name',
+    });
+</script>
 <main class="page landing-page">
   <section class="clean-block clean-form dark">
     <div class="container">
@@ -14,8 +24,6 @@
           name="brief"></textarea></div>
         <div class="form-group"><label for="post">Post</label><textarea class="form-control item" type="text" id="post"
           name="post"></textarea></div>
-        <div class="form-group"><label for="html">isHTML</label><input class="form-control item" type="checkbox" id="html"
-          name="html"></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
           name="imgPath"></div>
         </br>
