--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
     <script src="assets/js/font-awesome.js" crossorigin="anonymous"></script>
     <script src="assets/js/jquery-3.5.0.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/nuaddik2eu8k0yhh0txpl20m5qq2tf3y8defsxzu22us1y7k/tinymce/5/tinymce.min.js" referrerpolicy="origin"/></script>
 </head>
 
 
