--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                     <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email" id="email" name="email"></div>
                     <div class="form-group"><label for="password">Mật khẩu</label><input class="form-control" type="password" id="password" name="password"></div>
                     <div class="form-group">
-                        <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox"><label class="form-check-label" for="checkbox">Lưu mật khẩu</label></div>
+                        <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox" name="remember"><label class="form-check-label" for="checkbox">Remember me for 1 month</label></div>
                     </div><button class="btn btn-primary btn-block" type="submit">Đăng nhập</button></form>
             </div>
         </section>
