Add textarea feature api

--- a/views/addTraining.ejs
+++ b/views/addTraining.ejs
@@ -1,4 +1,14 @@
 <%- include("header"); -%>
+<script>
+  tinymce.init({
+      selector: 'textarea',
+      plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+      toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
+      toolbar_mode: 'floating',
+      tinycomments_mode: 'embedded',
+      tinycomments_author: 'Author name',
+    });
+</script>
 <main class="page landing-page">
   <section class="clean-block clean-form dark">
     <div class="container">
@@ -25,14 +35,14 @@
             name="link"></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
             name="imgPath"></div>
-        <div class="form-group"><label for="brief">Giới thiệu</label><input class="form-control item" type="text" id="brief"
-            name="brief"></div>
-        <div class="form-group"><label for="popular">Độ phổ biến</label><input class="form-control item" type="text" id="popular"
-            name="popular"></div>
-        <div class="form-group"><label for="requirement">Yêu cầu</label><input class="form-control item" type="text" id="requirement"
-            name="requirement1"></div>
-        <div class="form-group"><label for="syllabus">Syllabus</label><input class="form-control item" type="text" id="syllabus"
-            name="syllabus"></div>
+        <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
+            name="brief"></textarea></div>
+        <div class="form-group"><label for="popular">Độ phổ biến</label><textarea class="form-control item" type="text" id="popular"
+            name="popular"></textarea></div>
+        <div class="form-group"><label for="requirement">Yêu cầu</label><textarea class="form-control item" type="text" id="requirement"
+            name="requirement"></textarea></div>
+        <div class="form-group"><label for="syllabus">Syllabus</label><textarea class="form-control item" type="text" id="syllabus"
+            name="syllabus"></textarea></div>
         </br>
         <button class="btn btn-primary btn-block" type="submit">Tạo training</button>
       </form>
