--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -1,7 +1,7 @@
 <%- include("header"); -%>
 <script>
   tinymce.init({
-      selector: '#post',
+      selector: 'textarea',
       plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
       toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
       toolbar_mode: 'floating',
@@ -21,9 +21,9 @@
         <div class="form-group"><label for="name">Tên post</label><input class="form-control item" type="text" id="name"
           name="name"></div>
         <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
-          name="brief"></textarea></div>
+          name="brief" rows="3"></textarea></div>
         <div class="form-group"><label for="post">Post</label><textarea class="form-control item" type="text" id="post"
-          name="post"></textarea></div>
+          name="post" rows="20"></textarea></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
           name="imgPath"></div>
         </br>
