--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -1,7 +1,7 @@
 <%- include("header"); -%>
 <script>
   tinymce.init({
-      selector: '#post',
+      selector: 'textarea',
       plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
       toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
       toolbar_mode: 'floating',
@@ -22,9 +22,9 @@
         <div class="form-group"><label for="name">Tên post</label><input class="form-control item" type="text" id="name"
           name="name" value="<%= post.name %>"></div>
         <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
-          name="brief"><%= post.brief %></textarea></div>
+          name="brief" rows="3"><%= post.brief %></textarea></div>
         <div class="form-group"><label for="post">Post</label><textarea class="form-control item" type="text" id="post"
-          name="post"><%= post.post %></textarea></div>
+          name="post" rows="20"><%= post.post %></textarea></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
           name="imgPath" value = "<%= post.imgPath %>""></div>
         </br>
