--- a/views/editTraining.ejs
+++ b/views/editTraining.ejs
@@ -1,4 +1,14 @@
 <%- include("header"); -%>
+<script>
+  tinymce.init({
+      selector: 'textarea',
+      plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+      toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
+      toolbar_mode: 'floating',
+      tinycomments_mode: 'embedded',
+      tinycomments_author: 'Author name',
+    });
+</script>
 <main class="page landing-page">
   <section class="clean-block clean-form dark">
     <div class="container">
@@ -26,11 +36,11 @@
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
             name="imgPath" value="<%= training.imgPath %>"></div>
         <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
-            name="brief"><%= training.brief %></textarea></div>
+            name="brief" rows="12"><%= training.brief %></textarea></div>
         <div class="form-group"><label for="popular">Độ phổ biến</label><textarea class="form-control item" type="text" id="popular"
-            name="popular"><%= training.popular %></textarea></div>
+            name="popular" rows="1"><%= training.popular %></textarea></div>
         <div class="form-group"><label for="requirement">Yêu cầu</label><textarea class="form-control item" type="text" id="requirement"
-            name="requirement1"><%= training.requirement1 %></textarea></div>
+            name="requirement"><%= training.requirement %></textarea></div>
         <div class="form-group"><label for="syllabus">Syllabus</label><textarea class="form-control item" type="text" id="syllabus"
             name="syllabus"><%= training.syllabus %></textarea></div>
         </br>
