Added link homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
             <div class="text">
                 <h2 class="display-4">JS - Japanese Software Engineers</h2>
                 <p>@fu.jsclub</p>
-                <form action="/post/5e7cc58563e6231394b1d09e" method="GET">
+                <form action="/posts/5e9fcc4414fb72194074723e?" method="GET">
                   <button class="btn btn-outline-light btn-lg" type="submit">Learn More</button></div>
                 </form>
         </section>
@@ -20,7 +20,7 @@
                         <h3>“JS Club - Ichigo ichie” (JS Club - Nhất kì nhất hội)</h3>
                         <div class="getting-started-info">
                             <p>Từ những ngày đầu thành lập, JS mang sứ mạng trở thành một cộng đồng kết nối các sinh viên theo chuyên ngành hẹp JS. Sau này, câu lạc bộ được mở rộng, trở thành nơi chia sẻ kiến thức của các sinh viên YÊU THÍCH TIẾNG NHẬT và ĐAM MÊ LẬP TRÌNH.</p>
-                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="login">Join Now</a></div>
+                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="users/login">Join Now</a></div>
                 </div>
             </div>
         </section>
