Add forgot, change password

--- a/views/infoUpdate.ejs
+++ b/views/infoUpdate.ejs
@@ -41,6 +41,9 @@
                                   </div>
                               </div>
                               <hr>
+                              <a href="/users/changePassword/1">Đổi mật khẩu</a>
+                              <br>
+                              <br>
                               <div class="form-row">
                                   <div class="col-md-12 content-right"><button class="btn btn-primary form-btn mr-1" type="submit">LƯU</button><button class="btn btn-danger form-btn" type="reset">HỦY</button></div>
                               </div>
