--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,9 +13,13 @@
                 <form method="POST" action="/users/login">
                     <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email" id="email" name="email"></div>
                     <div class="form-group"><label for="password">Mật khẩu</label><input class="form-control" type="password" id="password" name="password"></div>
-                    <div class="form-group">
-                        <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox" name="remember"><label class="form-check-label" for="checkbox">Remember me for 1 month</label></div>
-                    </div><button class="btn btn-primary btn-block" type="submit">Đăng nhập</button></form>
+                    <div>
+                      <div class="form-group" style="display: inline-block;">
+                          <div class="form-check"><input class="form-check-input" type="checkbox" id="checkbox" name="remember"><label class="form-check-label" for="checkbox" style="font-size: small;">Remember me for 1 month</label></div>
+                      </div>
+                      <a href="/users/forgot" style="float: right; font-size: small;">Forgot password?</a>
+                    </div>
+                    <button class="btn btn-primary btn-block" type="submit">Đăng nhập</button></form>
             </div>
         </section>
     </main>
