added upload feature

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
                 <div class="block-heading">
                     <h2 class="text-info">Đăng Nhập</h2><p>Chưa có tài khoản? <a class="text-info" href="registration">Đăng ký</a></p>
                     <% try { error %>
-                      <div class="btn-warning"><%= error %></div>
+                      <div class="btn-warning col-md-5" style="margin: auto; margin-top: .5rem; padding: .5rem;"><%= error %></div>
                     <% } catch (e) {} %>
                 </div>
 
