--- a/views/infoUpdate.ejs
+++ b/views/infoUpdate.ejs
@@ -8,15 +8,14 @@
                         <div class="alert alert-info absolue center" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button><span>Profile save with success</span></div>
                     </div>
                 </div>
-                <form action="/users/update" method="POST">
+                <form action="/users/update" enctype="multipart/form-data" method="POST">
                     <div class="form-row profile-row">
-                        <div class="col-md-4 relative">
-                            <div class="avatar">
-                                <div class="avatar-bg center"></div>
-                            </div>
-                            <label>Link ảnh đại diện</label>
-                            <input type="text" class="form-control" name="avatarFile">
-                        </div>
+                      <div class="col-md-4 relative">
+                        <label>Ảnh đại diện</label>
+                        <div class="avatar">
+                            <div class="avatar-bg center"></div>
+                        </div><input type="file" class="form-control" name="avatar-file">
+                      </div>
                         <div class="col-md-8">
                             <h1>Cập nhật thông tin cá nhân</h1>
                             <hr>
