--- a/views/editPost.ejs
+++ b/views/editPost.ejs
@@ -25,12 +25,68 @@
           name="brief" rows="3"><%= post.brief %></textarea></div>
         <div class="form-group"><label for="post">Post</label><textarea class="form-control item" type="text" id="post"
           name="post" rows="20"><%= post.post %></textarea></div>
-        <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
-          name="imgPath" value = "<%= post.imgPath %>""></div>
+        <div class="form-group">
+          <label for="imgPath">Ảnh bìa</label>
+          <br>
+          <button type="button" style="display: none;" class="btn btn-danger" id="errorText"></button>
+          <button type="button" style="display: none;" class="btn btn-success" id="successText">Successfully uploaded</button>
+          <button type="button" style="display: none;" class="btn btn-warning" id="pendingText">Uploading...</button>
+          <input class="form-control item" type="file" id="imgFile" name="imgFile">
+          <input class="form-control item" style="display: none;" type="text" value="" id="imgPath" name="imgPath">
+        </div>
+        <div class="form-group"><label for="videoPath">Link video giới thiệu (nếu có)</label><input class="form-control item" type="text" id="videoPath"
+          name="videoPath"></div>
         </br>
         <button class="btn btn-primary btn-block" type="submit">Tạo Post</button>
       </form>
     </div>
   </section>
 </main>
+<script>
+  $("document").ready(function() {
+    $('input[type=file]').on("change", function() {
+      if ($(this).get(0).files.length > 0) {
+        $("#successText").css("display", "none")
+        $("#errorText").css("display", "none")
+        let file = $(this).get(0).files[0]
+        let fileSize = file.size / 1024 / 1024
+        if (fileSize > 2) {
+          $('#errorText').css("display", "")
+          $('#errorText').text("Please enter file size smaller than 2Mb")
+          return false
+        }
+        $("#pendingText").css("display", "")
+
+        var myHeaders = new Headers();
+        myHeaders.append("Authorization", "Client-ID 9fb3ad5364e669c");
+
+        var formdata = new FormData();
+        formdata.append("image", file);
+
+        var requestOptions = {
+          method: 'POST',
+          headers: myHeaders,
+          body: formdata,
+          redirect: 'follow'
+        };
+
+        fetch("https://api.imgur.com/3/image", requestOptions)
+          .then(response => response.text())
+          .then(result => {
+            let x = JSON.parse(result)
+            $("#pendingText").css("display", "none")
+            if (x.data.error) {
+              $('#errorText').css("display", "")
+              $('#errorText').text(x.data.error.message)
+            } else {
+              $('#imgPath').attr("value", x.data.link);
+              $('#successText').css("display", "")
+            }
+          })
+          .catch(error => console.log('error', error));
+      }
+    });
+  });
+  
+</script>
 <%- include("footer"); -%>
