--- a/views/post-list.ejs
+++ b/views/post-list.ejs
@@ -33,7 +33,13 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid dmmImg2" src="<%= i.imgPath %>"></div>
+                            <div class="col-lg-5">
+                              <% if (typeof i.videoPath !== 'undefined' && i.videoPath !== null) { %>
+                              <video class="rounded img-fluid dmmImg2" playsinline autoplay loop><source type="video/mp4" src="<%= i.videoPath %>"></video>
+                              <% } else { %>
+                              <img class="rounded img-fluid dmmImg2" src="<%= i.imgPath %>">
+                              <% } %>
+                            </div>
                             <div class="col-lg-7">
                                 <h3><%= i.name %></h3>
                                 <div class="info"><span class="text-muted"><%= i.date %> by&nbsp;<a href="#"><%= i.username %></a></span></div>
