--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,6 +31,18 @@
               id="password" name="password"></div>
           <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
             id="email" name="email"></div>
+          <div class="form-group">
+            <label for="inputState">Ban</label>
+            <select id="role" class="form-control" name="role">
+              <option selected>Choose here...</option>
+              <option>Chuyên môn</option>
+              <option>Đối ngoại</option>
+              <option>Truyền Thông</option>
+              <option>Văn Hoá</option>
+              <option>Nội dung</option>
+              <option>Khác</option>
+            </select>
+          </div>
           <div class="form-group mr-5" style="display:inline-block"><input class="form-control item" type="radio"
             id="male" name="sex" value="1" style="width: 1rem;"><label for="male" class="sexd">Nam</label></div>
           <div class="form-group" style="display:inline-block"><input class="form-control item" type="radio"
@@ -40,5 +52,8 @@
       </div>
     </section>
   </main>
+  <script>
+
+  </script>
 
 <%- include("footer"); -%>
