--- a/views/confession-list.ejs
+++ b/views/confession-list.ejs
@@ -9,7 +9,7 @@
     <div class="container mb-5">
       <div class="block-content">
         <div class="post-body">
-          <p style="font-size: 30px;">Confession #<%= j %></p>
+          <p style="font-size: 30px;">Confession #<%= j + 1 %></p>
           <p style="font-size: 20px;"><%= i.text %></p>
         </div>
       </div>
