--- a/views/addConfession.ejs
+++ b/views/addConfession.ejs
@@ -5,7 +5,7 @@
       <div class="block-heading">
         <h2 class="text-info">GỬI CONFESSIONS</h2>
       </div>
-      <form method="POST" action="/addedConfession" style="
+      <form method="POST" action="/confessions/add" style="
       margin: auto;
       width: 100%;max-width: 100%;">
         <div class="form-group"><label for="confes">Bạn muốn nói gì để chúng mình up lên JS Confessions nào?</label><textarea class="form-control item" type="text" id="confes"
