--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -34,8 +34,8 @@
       for (let i of document.getElementsByClassName("userdmmle"))
       i.setAttribute("href", "/users/" + i.textContent)
     </script>
-    <script src="assets/js/jquery-3.5.0.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="assets/js/jquery-3.5.0.min.js"></script> -->
+    <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="assets/js/baguetteBox.min.js"></script>
     <script src="assets/js/smoothproducts.min.js"></script>
     <script src="assets/js/theme.js"></script>
