--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -34,18 +34,14 @@
       for (let i of document.getElementsByClassName("userdmmle"))
       i.setAttribute("href", "/users/" + i.textContent)
     </script>
-    <!-- <script src="assets/js/jquery-3.5.0.min.js"></script> -->
-    <!-- <script src="assets/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="assets/js/baguetteBox.min.js"></script>
     <script src="assets/js/smoothproducts.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/bs-animation.js"></script>
     <script src="assets/js/micromodal.min.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
