--- a/views/user.ejs
+++ b/views/user.ejs
@@ -32,6 +32,7 @@
                                     <% if (update) { %>
                                       <li><a href="/users/update" style="color: blue;">Thay đổi thông tin cá nhân</a></li>
                                       <li><a href="/users/request" style="color: red;">Yêu cầu quyền quản trị</a></li>
+                                      <li><a href="/users/request/status" style="color: #FFC107;">Kiểm tra các quyền đã yêu cầu</a></li>
                                     <% } %>
                                 </ul>
                             </div>
