--- a/views/checkPermission.ejs
+++ b/views/checkPermission.ejs
@@ -2,20 +2,20 @@
 <main class="page blog-post">
 
 <section class="clean-block clean-post dark">
-  <% if (!confessions.length) { %>
+  <% if (!requests.length) { %>
     <div class="block-heading">
-      <h2>Hiện tại chưa có confessions nào cần duyệt</h2>
+      <h2>Hiện tại chưa có requests nào cần duyệt</h2>
     </div>
   <% } %>
-  <% for (let i of confessions) { %>
+  <% for (let i of requests) { %>
     <div class="container mb-5">
       <div class="block-content">
         <div class="post-body">
-          <p style="font-size: 20px;"><%= i.text %></p>
-          <form action="/confessions/<%= i._id %>/accept" method="POST" style="display: inline-block;">
+          <p style="font-size: 20px;"><%= i.username %> có quyền duyệt    <%= i.permission %></p>
+          <form action="/users/checkPermission/<%= i._id %>/accept" method="POST" style="display: inline-block;">
             <button type="submit" class="btn btn-success mr-1">Accept</button>
           </form>
-          <form action="/confessions/<%= i._id %>/decline" method="POST" style="display: inline-block;">
+          <form action="/users/checkPermission/<%= i._id %>/decline" method="POST" style="display: inline-block;">
             <button type="submit" class="btn btn-danger">Decline</button>
           </form>
         </div>
