--- a/views/confessionStatus.ejs
+++ b/views/confessionStatus.ejs
@@ -4,7 +4,7 @@
 <section class="clean-block clean-post dark">
   <% if (!confessions.length) { %>
     <div class="block-heading">
-      <h2>Hiện tại chưa có confessions nào cần duyệt</h2>
+      <h2>Bạn chưa có confession nào</h2>
     </div>
   <% } %>
   <% for (let i of confessions) { %>
@@ -12,12 +12,13 @@
       <div class="block-content">
         <div class="post-body">
           <p style="font-size: 20px;"><%= i.text %></p>
-          <form action="/confessions/<%= i._id %>/accept" method="POST" style="display: inline-block;">
-            <button type="submit" class="btn btn-success mr-1">Accept</button>
-          </form>
-          <form action="/confessions/<%= i._id %>/decline" method="POST" style="display: inline-block;">
-            <button type="submit" class="btn btn-danger">Decline</button>
-          </form>
+            <% if (i.status === "accepted") { %>
+            <button type="submit" class="btn btn-success mr-1">Accepted</button>
+            <% } else if (i.status === "pending") { %>
+            <button type="submit" class="btn btn-warning">Pending</button>
+            <% } else if (i.status === "declined") { %> 
+            <button type="submit" class="btn btn-danger">Declined</button>
+            <% } %>
         </div>
       </div>
     </div>
