--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-  
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JS Club</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="assets/css/micromodal.css">
-    <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
-    <script src="assets/js/font-awesome.js" crossorigin="anonymous"></script>
-    <script src="assets/js/jquery-3.5.0.min.js"></script>
-    <script src="https://cdn.tiny.cloud/1/nuaddik2eu8k0yhh0txpl20m5qq2tf3y8defsxzu22us1y7k/tinymce/5/tinymce.min.js" referrerpolicy="origin"/></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>JS Club</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+  <link rel="stylesheet" href="assets/css/aos.css">
+  <link rel="stylesheet" href="assets/css/baguetteBox.min.css">
+  <link rel="stylesheet" href="assets/css/smoothproducts.css">
+  <link rel="stylesheet" href="assets/css/micromodal.css">
+  <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
+  <script src="assets/js/font-awesome.js" crossorigin="anonymous"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="https://cdn.tiny.cloud/1/nuaddik2eu8k0yhh0txpl20m5qq2tf3y8defsxzu22us1y7k/tinymce/5/tinymce.min.js"
+    referrerpolicy="origin" />
+  </script>
 </head>
 
 
@@ -24,29 +26,36 @@
     var socket = io();
     socket.emit('login');
   </script>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="/">JS CLUB</a>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link logo" href="/">trang chủ</a></li>
-                    <% if (typeof user !== 'undefined' && user !== null) { %>
-                      <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
-                          <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/posts/list">Tin Tức</a><a class="dropdown-item" role="presentation" href="/confessions/list">Confession</a></div>
-                      </li>
-                    <% } else { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/posts/list">Tin tức</a></li>
-                    <% } %>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/trainings/list">Training</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
-                    <% if (typeof user !== 'undefined' && user !== null) { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/profile">trang cá nhân</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/logout">đăng xuất</a></li>
-                    <% } else { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/login">đăng nhập</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="/users/register">ĐĂNG KÝ</a></li>
-                    <% } %>
-                </ul>
-            </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
-    </nav>
-
-    
+  <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+    <div class="container-fluid" style="margin-right: 0rem; margin-left: 10%;"><a class="navbar-brand logo" href="/">JS CLUB</a>
+      <div class="collapse navbar-collapse" id="navcol-1">
+        <ul class="nav navbar-nav" style="margin-left: auto;">
+          <li class="nav-item" role="presentation"><a class="nav-link logo" href="/">trang chủ</a></li>
+          <% if (typeof user !== 'undefined' && user !== null) { %>
+          <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
+              href="#">bài viết&nbsp;</a>
+            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/posts/list">Tin
+                Tức</a><a class="dropdown-item" role="presentation" href="/confessions/list">Confession</a></div>
+          </li>
+          <% } else { %>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/posts/list">Tin tức</a></li>
+          <% } %>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/trainings/list">Training</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
+          <% if (typeof user !== 'undefined' && user !== null) { %>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/users/profile">trang cá nhân</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/users/logout">đăng xuất</a></li>
+          <% } else { %>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/users/login">đăng nhập</a></li>
+          <li class="nav-item" role="presentation"><a class="nav-link" href="/users/register">ĐĂNG KÝ</a></li>
+          <% } %>
+          <% if (typeof user !== 'undefined' && user !== null) { %>
+            <li class="nav-item" role="presentation"><a class="nav-link" href="/users/admin">Quản lý</a></li>
+          <% } else { %>
+            <li class="nav-item" role="presentation" style="visibility: hidden;"><a class="nav-link" href="/users/admin">Quản lý</a></li>
+          <% } %>
+        </ul>
+      </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle
+          navigation</span><span class="navbar-toggler-icon"></span></button>
+    </div>
+  </nav>
